@@ -1,5 +1,11 @@
 2001-08-09  Benjamin Kosnik  <bkoz@redhat.com>
 
+	* po/Makefile.am (check-no): Add.
+	(check-yes): Same.
+	* po/Makefile.in: Regenerate.
+	
+2001-08-09  Benjamin Kosnik  <bkoz@redhat.com>
+
 	* acconfig.h (_GLIBCPP_MEM_LIMITS): Define.
 	* config.h.in: Regenerate.
 	* acinclude.m4 (GLIBCPP_CHECK_SETRLIMIT): Check for setrlimit
